--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./backend
     image: geo-portfolio-backend
     environment:
-      - PUBLIC_BASE_URL=http://localhost:8080
+      - PUBLIC_BASE_URL=${PUBLIC_BASE_URL}
     ports:
       - "8080:8080"
     volumes:
@@ -17,6 +17,8 @@ services:
     working_dir: /app
     ports:
       - "5173:5173"
+    environment:
+      - BACKEND_URL=${BACKEND_URL}
     volumes:
       - ./frontend:/app
       - node_modules:/app/node_modules   # <- cache deps between runs
